--- a/css/responsive.css
+++ b/css/responsive.css
@@ -251,7 +251,9 @@
 	}
 }
 @media (max-width:600px){
-	
+	 .home-left_img{
+		display: block;
+	}
 }
 @media (max-width:575px){
 	.top_menu {
@@ -269,6 +271,13 @@
 	.home_banner_area {
 		min-height: 450px;
 	}
+   
+	.home_banner_area .banner_inner .banner_content img{
+		display: block !important;
+		margin-top: -100px;
+		
+	}
+
 	.home_banner_area .banner_inner {
 		min-height: 450px;
 	}
