--- a/css/style.css
+++ b/css/style.css
@@ -59,17 +59,59 @@ a {
 .row.m0 {
   margin: 0px; }
 
+  #with-us{
+   background-image: linear-gradient(to right, rgb(128, 29, 209), #8490ff 0%,  rgb(128, 29, 209) 100%);
+  }
+
   #riff{
     font-weight:bold;
-    font-size: 16px;
+    font-size: 25px;
+    color: white;
   
+  }
+  #vlc li{
+    position: relative;
+    margin-left: calc(1em + 10px);
+    color: white
   }
   
   #siff{
     text-align: center;
     padding-bottom: 20px;
+    font-size: 35px;
+    color: white;
   
   }
+  #siff-ii{
+    color: #72c1fa;
+  }
+  #pp{
+    color: white;
+  }
+  #clr{ 
+    width: 87px;
+    height: 5px;
+    top: 89.3125px;
+    left: 116.5px;
+    display: block;
+    align-items: center;
+    color: rgb(128, 29, 209);
+    background-color: rgb(128, 29, 209);
+    text-align: center;
+    
+    
+    
+  }
+
+
+  #idd{
+   text-align: center;
+   padding-left: 40px;
+   padding-top: 15px;
+
+
+  }
+
 body {
   line-height: 26px;
   font-size: 16px;
@@ -123,7 +165,7 @@ button:focus {
     width: 90%;
     margin: 50px auto;
     padding: 30px;
-    background-color: #8490ff;
+    background-color:  rgb(128, 29, 209);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -196,6 +238,7 @@ button:focus {
   @media (max-width: 768px) {
     #inquireForm {
       width: 100%;
+      display: block
     }
   
     #inquireForm label {
@@ -209,6 +252,7 @@ button:focus {
     #submit {
       font-size: 16px;
     }
+
   }
   
 
@@ -3196,6 +3240,8 @@ h6 {
   margin-top: 60px; }
   .copy_right_text p a {
     color: #8490ff; }
+
+    
 
 /* End Footer Area css
 ============================================================================================ */
